fluxcd-dev/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-recon
spec:
  hosts:
    - dev.k8s
  gateways:
    - istio-ingress/k8s-gateway
    - mesh # applies to all the sidecars in the mesh
  http:
    - name: recon-k8s-micro
      match:
        - uri:
            prefix: /k8s-micro/v0
      route:
        - destination:
            host: recon-k8s-micro
